# internal/repository/db/models.go
@@ -1,0 +1,25 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.29.0
+
+package db
+
+import (
+	"github.com/gofrs/uuid"
+	"github.com/jackc/pgx/v5/pgtype"
+)
+
+type Url struct {
+	ID        uuid.UUID
+	UserID    uuid.NullUUID
+	ShortCode string
+	LongUrl   string
+	CreatedAt pgtype.Timestamptz
+}
+
+type User struct {
+	ID        uuid.UUID
+	Username  string
+	Password  string
+	CreatedAt pgtype.Timestamptz
+}
